--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
     "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "apollo-boost": "^0.4.4",
+    "faker": "^4.1.0",
     "graphql": "^14.5.6",
+    "history": "^4.10.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -16,6 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:watch": "react-scripts test --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,13 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.1",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^8.0.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
-    "prettier": "^1.18.2",
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.1",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0"
+    "prettier": "^1.18.2"
   }
 }
