--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "apollo-boost": "^0.4.4",
+    "core-js": "^3.2.1",
     "faker": "^4.1.0",
     "graphql": "^14.5.6",
     "history": "^4.10.1",
