Meaningful project name and author in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "client-v1",
+  "name": "bookstore-app",
+  "author": "M Narvidas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
